<resources>
    <string name="app_name">MovInfo</string>
    <string name="splashImageContentDescription">App Icon</string>
    <string name="splash_message">Discover the most popular movies</string>
    <string name="next">Start</string>
    <string name="start">Start</string>
    <string name="startDescription">Start</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="sort_by_menu_title">Sort by</string>
    <string name="pref_sort_by_title">Order movies by</string>
    <string name="sort_by_popularity_label">Popularity</string>
    <string name="sort_by_rating_label">Rating</string>
    <string name="sort_by_popularity_value">popularity</string>
    <string name="sort_by_rating_value">rating</string>
    <string name="sort_order_key">sort_order</string>
    <string name="movies_list_fragment_tag">movi_list_frag_tag</string>
    <string name="action_settings">Settings</string>
    <string name="vote_average_label">Vote Average</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="rating_label">Rating</string>
    <string name="no_internet_connection_message">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="action_sort_order">Sort by</string>
    <string name="sort_order_tooltip_text">Sort by e.g. rating</string>
    <string name="popular_movies_title">Popular movies</string>
    <string name="top_rated_movies_title">Top Rated Movies</string>
    <string name="connected_to_internet">Connected to the Internet</string>
    <string name="videos_label">Videos</string>
    <string name="reviews_label">Reviews</string>
    <string name="video_icon_description">Video Icon</string>
    <string name="favorite">Favorite button</string>
    <string name="sort_by_favorites_label">Favorites</string>
    <string name="favorite_movies_title">Favorites</string>
    <string name="share_video_description">share video</string>
</resources>
