<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/movies_list_sort_by_menu_item"
        android:orderInCategory="1"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_sort_order">

        <menu>
            <item android:id="@+id/movies_list_popularity_menu_item"
                android:orderInCategory="1"
                android:title="@string/sort_by_popularity_label" />

            <item android:id="@+id/movies_list_rating_menu_item"
                android:orderInCategory="2"
                android:title="@string/sort_by_rating_label" />
        </menu>

    </item>
</menu>
