<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/movieDetailsPosterImageView"
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:contentDescription="@string/movie_poster_description"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movieDetailsTitleTextView"
            style="@style/AppTheme.MovieDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailsPosterImageView"
            tools:text="MOVIE TITLE" />

        <TextView
            android:id="@+id/voteAverageLabelTextView"
            style="@style/AppTheme.MovieDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/vote_average_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/voteAverageTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/voteAverageTextView"
            style="@style/AppTheme.MovieDetailsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/movieDetailsRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailsTitleTextView"
            tools:text="vote average"
            android:layout_marginLeft="8dp" />

        <TextView
            android:id="@+id/releaseDateLabelTextView"
            style="@style/AppTheme.MovieDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/release_date_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/releaseDateTextView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/releaseDateTextView"
            style="@style/AppTheme.MovieDetailsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/releaseDateLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/voteAverageTextView"
            tools:text="release date" />

        <TextView
            android:id="@+id/synopsisLabelTextView"
            style="@style/AppTheme.MovieDetailsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/synopsis_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/releaseDateLabelTextView" />

        <TextView
            android:id="@+id/movieSynopsisTextView"
            style="@style/AppTheme.MovieDetailsValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synopsisLabelTextView"
            tools:text="MOVIE SYNOPSIS" />

        <RatingBar
            android:id="@+id/movieDetailsRatingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:isIndicator="true"
            android:max="5"
            app:layout_constraintStart_toEndOf="@+id/voteAverageLabelTextView"
            app:layout_constraintTop_toBottomOf="@+id/movieDetailsTitleTextView"
            android:layout_marginLeft="8dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>